--- a/portfolio.html
+++ b/portfolio.html
@@ -96,8 +96,8 @@
        
     </div>
     <div class="project-images">
-         <a href="images/portfolio/Erased-Layers/Nhidi_Documentat-1.jpg" data-featherlight="image">
-            <img src="images/portfolio/Erased-Layers/Nhidi_Documentat-1.jpg" alt="Artwork 3">
+         <a href="images/portfolio/Erased-Layers/image-layer-84.jpeg" data-featherlight="image">
+            <img src="images/portfolio/Erased-Layers/image-layer-84.jpeg" alt="Artwork 3">
         </a>
     </div>
 <div class="project-images">
@@ -112,16 +112,16 @@
         </a>
     </div>
      <div class="project-images">
-         <a href="images/portfolio/Erased-Layers/Nhidi_Documentat-5.jpg" data-featherlight="image">
-            <img src="images/portfolio/Erased-Layers/Nhidi_Documentat-5.jpg" alt="Artwork 3">
+         <a href="images/portfolio/Erased-Layers/image-layer-9.jpeg" data-featherlight="image">
+            <img src="images/portfolio/Erased-Layers/image-layer-9.jpeg" alt="Artwork 3">
         </a>
     </div>
     <div class="project-description">
-        <p>This series explores the emotional spectrum through fluid brushwork and vibrant colors. Each piece is inspired by nature and inner contemplation. Materials include high-grade watercolor on handmade textured paper. This collection has been featured in the “Color in Motion” exhibition held in Bhopal, 2024.</p>
+        <!-- <p>This series explores the emotional spectrum through fluid brushwork and vibrant colors. Each piece is inspired by nature and inner contemplation. Materials include high-grade watercolor on handmade textured paper. This collection has been featured in the “Color in Motion” exhibition held in Bhopal, 2024.</p> -->
 
-        <p><strong>Medium:</strong> Watercolor on paper<br>
+        <!-- <p><strong>Medium:</strong> Watercolor on paper<br>
            <strong>Size:</strong> 12x18 inches (each)<br>
-           <strong>Year:</strong> 2024</p>
+           <strong>Year:</strong> 2024</p> -->
     </div>
 
     <a href="index.html#gallery" class="back-link"><i class="fa fa-arrow-left"></i> Back to Portfolio</a>
