--- a/portfolio2.html
+++ b/portfolio2.html
@@ -106,11 +106,11 @@
         </a>
     </div>
 
-    <div class="project-images">
+    <!-- <div class="project-images">
          <a href="images/portfolio/YOU-MAKE-UP-ME/BG2A0938.JPG" data-featherlight="image">
             <img src="images/portfolio/YOU-MAKE-UP-ME/BG2A0938.JPG" alt="Artwork 3">
         </a>
-    </div>
+    </div> -->
      <div class="project-images">
          <a href="images/portfolio/YOU-MAKE-UP-ME/BG2A0939.JPG" data-featherlight="image">
             <img src="images/portfolio/YOU-MAKE-UP-ME/BG2A0939.JPG" alt="Artwork 3">
