--- a/portfolio4.html
+++ b/portfolio4.html
@@ -106,11 +106,11 @@
         </a>
     </div>
 
-    <div class="project-images">
-         <a href="images/portfolio/Until-When/DSC_2700.JPG" data-featherlight="image">
+    <!-- <div class="project-images">
+         <a href="images/portfolio/Until-When/.JPG" data-featherlight="image">
             <img src="images/portfolio/Until-When/DSC_2700.JPG" alt="Artwork 3">
         </a>
-    </div>
+    </div> -->
      <div class="project-images">
          <a href="images/portfolio/Until-When/bh.JPG" data-featherlight="image">
             <img src="images/portfolio/Until-When/bh.JPG" alt="Artwork 3">
