--- a/index.html
+++ b/index.html
@@ -322,12 +322,27 @@ from silence to solidarity.</P>
 
                                 <div class="swiper-slide">
                                 <blockquote class="testimonial_new classic">
+                                    <img class="exhibition-poster" src="images/Exhibitions/iloveimg-resized/interim.png" alt="User" />
+                                    <!-- <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</q>
+                                    <footer>Thomas Doe - Happy Customer</footer> -->
+                                </blockquote>
+                                </div>
+
+                                <div class="swiper-slide">
+                                <blockquote class="testimonial_new classic">
                                     <img class="exhibition-poster" src="images/Exhibitions/iloveimg-resized/img2.jpeg" alt="User" />
                                     <!-- <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</q>
                                     <footer>John Doe - Happy Customer</footer> -->
                                 </blockquote>
                                 </div>
 
+                                 <div class="swiper-slide">
+                                <blockquote class="testimonial_new classic">
+                                    <img class="exhibition-poster" src="images/Exhibitions/iloveimg-resized/img4.jpg" alt="User" />
+                                    <!-- <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</q>
+                                    <footer>Thomas Doe - Happy Customer</footer> -->
+                                </blockquote>
+                                </div>
                                 <div class="swiper-slide">
                                 <blockquote class="testimonial_new classic">
                                     <img class="exhibition-poster" src="images/Exhibitions/iloveimg-resized/img3.jpeg" alt="User" />
@@ -336,13 +351,7 @@ from silence to solidarity.</P>
                                 </blockquote>
                                 </div>
 
-                                <div class="swiper-slide">
-                                <blockquote class="testimonial_new classic">
-                                    <img class="exhibition-poster" src="images/Exhibitions/iloveimg-resized/img4.jpg" alt="User" />
-                                    <!-- <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</q>
-                                    <footer>Thomas Doe - Happy Customer</footer> -->
-                                </blockquote>
-                                </div>
+                               
 
                                 <div class="swiper-slide">
                                 <blockquote class="testimonial_new classic">
@@ -353,7 +362,6 @@ from silence to solidarity.</P>
                                 </div>
 
                                 
-
                                 <div class="swiper-slide">
                                 <blockquote class="testimonial_new classic">
                                     <img class="exhibition-poster" src="images/Exhibitions/iloveimg-resized/img7.jpg" alt="User" />
