--- a/portfolio5.html
+++ b/portfolio5.html
@@ -100,11 +100,11 @@
             <img src="images/portfolio/Sculptures/NomadicHomelessness/NomadicLife/img-5.jpeg" alt="Artwork 3">
         </a>
     </div>
-<div class="project-images">
+<!-- <div class="project-images">
          <a href="images/portfolio/Sculptures/NomadicHomelessness/NomadicLife/img-6.jpeg" data-featherlight="image">
             <img src="images/portfolio/Sculptures/NomadicHomelessness/NomadicLife/img-6.jpeg" alt="Artwork 3">
         </a>
-    </div>
+    </div> -->
 
     <div class="project-images">
          <a href="images/portfolio/Sculptures/NomadicHomelessness/NomadicLife/img-4.jpeg" data-featherlight="image">
