--- a/index.html
+++ b/index.html
@@ -201,13 +201,14 @@
                
                         <!-- <h2 class="section-title">How We Help You To Sell Your Product</h2> -->
                      <p class="section-subtitle" style="text-align: justify; text-justify: inter-word;">
-Nidhi Bodana is a multidisciplinary visual artist from Bagh (Dhar), Madhya Pradesh, India, currently based in Glasgow, Scotland, UK. She earned a First Class A+ in BVA Sculpture from Maharaja Sayajirao University of Baroda, Gujarat, Her work has been supported by the GSA Stag Fund, the Niamh Forbes Scholarship, and the ArtDemic India Grant.
+I am Nidhi Bodana, a multidisciplinary visual artist from Bagh (Dhar), Madhya Pradesh, India, currently based in Glasgow, Scotland, UK. I hold a First Class A+ degree in BVA Sculpture from the Maharaja Sayajirao University of Baroda, Gujarat. My artistic journey has been supported by the GSA Stag Fund, the Niamh Forbes Scholarship, and the ArtDemic India Grant.
 
 </p>
                        <p class="section-subtitle" style="text-align: justify; text-justify: inter-word;">
-Nidhi’s work has been exhibited in India and UK, including the Abir India Exhibition at Bikaner House (New Delhi), Visayah, Mayukha, Jal Vayu, the Annual Degree Shows (MSU Baroda), Mandu Festival (Madhya Pradesh), and the Interim Show at The Glasgow School of Art. Currently, she is engaged in museum and community practice at Glasgow’s Gallery of Modern Art (GoMA). In 2023, she curated “Flood of Memories”, a group exhibition showcasing 13 emerging artists at Gallerie Splash, Gurgaon, 
-Delhi, India.</p>
-                    <p><a href="https://bodananidhi.co.uk/images/About/NidhiBodanaCV.pdf" download>Download CV</a>
+My work has been exhibited in both India and the UK, including at the Abir India Exhibition at Bikaner House (New Delhi), Visayah, Mayukha, Jal Vayu, the Annual Degree Shows at MSU Baroda, the Mandu Festival in Madhya Pradesh, and the Interim Show at The Glasgow School of Art. Currently, I’m deeply involved in museum and community practice at Glasgow’s Gallery of Modern Art (GoMA).</p>
+                    <p>
+                        <p class="section-subtitle" style="text-align: justify; text-justify: inter-word;">In 2023, I curated "Flood of Memories," a group exhibition featuring the work of 13 emerging artists, held at Gallerie Splash in Gurgaon, Delhi, India.</p>
+                        <a href="https://bodananidhi.co.uk/images/About/NidhiBodanaCV.pdf" download>Download CV</a>
 </p>        
                          </div>
 
@@ -220,11 +221,10 @@ Delhi, India.</p>
                        <div class="icon-block-description">
                             <h4>ARTIST STATEMENT</h4>
                             <p style="text-align: justify; text-justify: inter-word;">“I don’t create art to aestheticize suffering—I create to bear witness, reclaim space, and transform. My work seeks to heal, empower, and bring visibility to what has been silenced, overlooked, or rendered invisible.”
-Her socially engaged practice spans sculpture, performance, participatory art, installation, painting, sound, and activism. At the core of her work is a commitment to reclaiming space for memory, for bodies, and for voices silenced by systemic neglect.
+My socially engaged practice spans sculpture, performance, participatory art, installation, painting, sound, and activism. At the core of my work is a commitment to reclaiming space for memory, for bodies, and for voices silenced by systemic neglect.
 </p>
-<P style="text-align: justify; text-justify: inter-word;"> Her work challenges social norms, gender roles, and systems of erasure, while remaining deeply attuned to the historical weight carried by materials and bodies, particularly those of everyday individuals who have been overlooked, silenced, or marginalized, especially within Black and Brown communities.—bearing stories of power, control, labour, and modern-day slavery. Through this lens, she confronts inherited violence and systemic oppression not only to expose them but to transform them. Whether through performance or immersive installation, her work becomes a site of healing, visibility, and reclamation—inviting audiences to move from passive viewing to active witnessing, 
-from silence to solidarity.</P>
-<p style="text-align: justify; text-justify: inter-word;">Nidhi’s practice is confrontational, socio-political, intimate, and deeply rooted in the urgency of lived realities. She creates spaces where suppressed narratives are not merely observed—they are felt, shared, and transformed. Her process often begins with what others overlook: discarded materials, bodily traces, textiles, and everyday objects. These carry memory and meaning, forming the foundation of her visual language. Collaborators—often everyday individuals met through chance and shared experience—become integral to these creative spaces of resistance, empathy, and visibility. </p>
+<P style="text-align: justify; text-justify: inter-word;"> HI challenge social norms, gender roles, and systems of erasure, while remaining deeply attuned to the historical weight carried by materials and bodies, particularly those of everyday individuals who have been overlooked, silenced, or marginalized—especially within Black and Brown communities—bearing stories of power, control, labour, and modern-day slavery. Through this lens, my work confronts inherited violence and systemic oppression not only to expose them but to transform them. Whether through performance or immersive installation, the work becomes a site of healing, visibility, and reclamation, inviting audiences to move from passive viewing to active witnessing, from silence to solidarity.</P>
+<p style="text-align: justify; text-justify: inter-word;">My practice is confrontational, socio-political, intimate, and deeply rooted in the urgency of lived realities. I create spaces where suppressed narratives are not merely observed; they are felt, shared, and transformed. My process often begins with what others overlook: discarded materials, bodily traces, textiles, and everyday objects. These carry memory and meaning, forming the foundation of my visual language. Collaborators often everyday individuals met through chance and shared experience become integral to these creative spaces of resistance, empathy, and visibility.</p>
                         </div>
 
                            <a><img src="images/YOU-MAKE-UP-ME/BG2A0927.JPG" alt="Nidhi Bodana"/></a>
@@ -244,25 +244,40 @@ from silence to solidarity.</P>
 
         <!--Gallery-->
         <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-filter="a">
-                <a href="portfolio.html" class="col-3 wow fadeIn" data-title="लुप्तपरतलः आत्मसंस्कारभूम">
+                <a href="portfolio.html" class="col-3 wow fadeIn" style="width: 20%;" data-title="लुप्तपरतलः आत्मसंस्कारभूम">
                 <img src="images/portfolio/Erased-Layers/image-layer-8.jpeg" alt="Landing Page"/>
                 </a>
-                <a href="portfolio2.html"  class="col-3 wow fadeIn" data-title="YOU MAKE UP ME">
+                <a href="portfolio2.html"  class="col-3 wow fadeIn" style="width: 20%;" data-title="YOU MAKE UP ME">
                     <img src="images/portfolio/YOU-MAKE-UP-ME/image-log-5.jpeg" alt="Landing Page"/>
                 </a>
-                 <a href="portfolio3.html"   class="col-3 wow fadeIn" data-title="Who AM I">
+                 <a href="portfolio3.html"   class="col-3 wow fadeIn" style="width: 20%;" data-title="Who AM I">
                   <img src="images/portfolio/Who-Am-I/IMG_3724_log.jpg" alt="Landing Page"/>
                 </a>
-                <a href="portfolio4.html"  class="col-3 wow fadeIn" data-title="Until When">
+                <a href="portfolio4.html"  class="col-3 wow fadeIn" style="width: 20%;" data-title="Until When">
                    <img src="images/portfolio/Until-When/DSC_2715_log.jpg" alt="Landing Page"/>
                 </a>
-               
-                <a href="portfolio5.html" class="col-3 wow fadeIn"  data-title="Nomadic Life">
+                <a href="portfolio9.html"  class="col-3 wow fadeIn" style="width: 20%;" data-title="We Are Innocent">
+                   <img src="images/portfolio/WeAreInnocent/We_Are_Innocent/resizecom_DSC_4595.JPG" alt="We Are Innocent"/>
+                </a>
+               <a href="portfolio9.html"  class="col-3 wow fadeIn" style="width: 20%;" data-title="Everthing Visible Homelessness">
+                  <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img00.jpeg" alt="EverthingIs Visible Homelessness"/>
+                </a> 
+                <a href="portfolio5.html" class="col-3 wow fadeIn" style="width: 20%;"  data-title="Nomadic Life">
                   <img src="images/portfolio/Sculptures/NomadicHomelessness/NomadicLife/resizecom_img-1.jpeg" alt="Landing Page"/>
                 </a>
-                <a href="portfolio6.html"  class="col-3 wow fadeIn" data-title="Rememberance">
+                <a href="portfolio6.html"  class="col-3 wow fadeIn" style="width: 20%;" data-title="Rememberance">
                   <img src="images/portfolio/Sculptures/Rememberance/resizecom_img5.jpeg" alt="Landing Page"/>
-                </a>                   
+                </a> 
+                 <a href="portfolio7.html"  class="col-3 wow fadeIn" style="width: 20%;" data-title="Lady with Moon">
+                  <img src="images/portfolio/Sculptures/LadywithMoon/img99.jpg" alt="Landing Page"/>
+                </a> 
+                <a href="portfolio8.html"  class="col-3 wow fadeIn" style="width: 20%;" data-title="Playing Squirrels">
+                  <img src="images/portfolio/Sculptures/PlayingSquirrels/resizecom_img4.jpeg" alt="Playing Squirrels"/>
+                </a>  
+                <!-- <a href="portfolio9.html"  class="col-3 wow fadeIn" style="width: 20%;" data-title="EverthingIs Visible Homelessness">
+                  <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img00.jpeg" alt="EverthingIs Visible Homelessness"/>
+                </a>  -->
+
         </aside>
 
         <!-- <aside id="gallery" class="row text-center scrollto clearfix">
