--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
                
                         <!-- <h2 class="section-title">How We Help You To Sell Your Product</h2> -->
                      <p class="section-subtitle" style="text-align: justify; text-justify: inter-word;">
-I am Nidhi Bodana, a multidisciplinary visual artist from Bagh (Dhar), Madhya Pradesh, India, currently based in Glasgow, Scotland, UK. I hold a First Class A+ degree in BVA Sculpture from the Maharaja Sayajirao University of Baroda, Gujarat. My artistic journey has been supported by the GSA Stag Fund, the Niamh Forbes Scholarship, and the ArtDemic India Grant.
+I am Nidhi Bodana, a multidisciplinary visual artist originally from Bagh (Dhar), Madhya Pradesh, India, now based in Glasgow, Scotland, UK. I hold a First Class MFA from The Glasgow School of Art and a First Class A+ BVA in Sculpture from Maharaja Sayajirao University of Baroda.
 
 </p>
                        <p class="section-subtitle" style="text-align: justify; text-justify: inter-word;">
-My work has been exhibited in both India and the UK, including at the Abir India Exhibition at Bikaner House (New Delhi), Visayah, Mayukha, Jal Vayu, the Annual Degree Shows at MSU Baroda, the Mandu Festival in Madhya Pradesh, and the Interim Show at The Glasgow School of Art. Currently, I’m deeply involved in museum and community practice at Glasgow’s Gallery of Modern Art (GoMA).</p>
+My work has received support from the GSA Stag Fund, the Niamh Forbes Scholarship, and the ArtDemic India Grant. I have exhibited in India and the UK, with highlights including the Abir India Exhibition at Bikaner House (New Delhi), Visayah, Mayukha, Jal Vayu, the Annual Degree Shows at MSU Baroda, and the Interim Show at The Glasgow School of Art. I have also presented performances, exhibitions, and workshops at the Mandu Festival in Madhya Pradesh.</p>
                     <p>
-                        <p class="section-subtitle" style="text-align: justify; text-justify: inter-word;">In 2023, I curated "Flood of Memories," a group exhibition featuring the work of 13 emerging artists, held at Gallerie Splash in Gurgaon, Delhi, India.</p>
+                        <p class="section-subtitle" style="text-align: justify; text-justify: inter-word;">In 2023, I curated Flood of Memories, a significant group exhibition featuring 13 emerging artists at Gallerie Splash in Gurgaon, Delhi. Currently, I am actively involved in museum and community engagement through my work at Glasgow’s Gallery of Modern Art (GoMA) and ICY.</p>
                         <a href="https://bodananidhi.co.uk/images/About/NidhiBodanaCV.pdf" download>Download CV</a>
 </p>        
                          </div>
@@ -223,7 +223,7 @@ My work has been exhibited in both India and the UK, including at the Abir India
                             <p style="text-align: justify; text-justify: inter-word;">“I don’t create art to aestheticize suffering—I create to bear witness, reclaim space, and transform. My work seeks to heal, empower, and bring visibility to what has been silenced, overlooked, or rendered invisible.”
 My socially engaged practice spans sculpture, performance, participatory art, installation, painting, sound, and activism. At the core of my work is a commitment to reclaiming space for memory, for bodies, and for voices silenced by systemic neglect.
 </p>
-<P style="text-align: justify; text-justify: inter-word;"> HI challenge social norms, gender roles, and systems of erasure, while remaining deeply attuned to the historical weight carried by materials and bodies, particularly those of everyday individuals who have been overlooked, silenced, or marginalized—especially within Black and Brown communities—bearing stories of power, control, labour, and modern-day slavery. Through this lens, my work confronts inherited violence and systemic oppression not only to expose them but to transform them. Whether through performance or immersive installation, the work becomes a site of healing, visibility, and reclamation, inviting audiences to move from passive viewing to active witnessing, from silence to solidarity.</P>
+<P style="text-align: justify; text-justify: inter-word;"> I challenge social norms, gender roles, and systems of erasure, while remaining deeply attuned to the historical weight carried by materials and bodies, particularly those of everyday individuals who have been overlooked, silenced, or marginalized—especially within Black and Brown communities—bearing stories of power, control, labour, and modern-day slavery. Through this lens, my work confronts inherited violence and systemic oppression not only to expose them but to transform them. Whether through performance or immersive installation, the work becomes a site of healing, visibility, and reclamation, inviting audiences to move from passive viewing to active witnessing, from silence to solidarity.</P>
 <p style="text-align: justify; text-justify: inter-word;">My practice is confrontational, socio-political, intimate, and deeply rooted in the urgency of lived realities. I create spaces where suppressed narratives are not merely observed; they are felt, shared, and transformed. My process often begins with what others overlook: discarded materials, bodily traces, textiles, and everyday objects. These carry memory and meaning, forming the foundation of my visual language. Collaborators often everyday individuals met through chance and shared experience become integral to these creative spaces of resistance, empathy, and visibility.</p>
                         </div>
 
@@ -259,15 +259,16 @@ My socially engaged practice spans sculpture, performance, participatory art, in
                 <a href="portfolio9.html"  class="col-3 wow fadeIn" style="width: 20%;" data-title="We Are Innocent">
                    <img src="images/portfolio/WeAreInnocent/We_Are_Innocent/resizecom_DSC_4595.JPG" alt="We Are Innocent"/>
                 </a>
-               <a href="portfolio9.html"  class="col-3 wow fadeIn" style="width: 20%;" data-title="Everthing Visible Homelessness">
+                 <a href="portfolio6.html"  class="col-3 wow fadeIn" style="width: 20%;" data-title="Rememberance">
+                  <img src="images/portfolio/Sculptures/Rememberance/resizecom_img5.jpeg" alt="Landing Page"/>
+                </a> 
+               <a href="portfolio10.html"  class="col-3 wow fadeIn" style="width: 20%;" data-title="Everthing Visible Homelessness">
                   <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img00.jpeg" alt="EverthingIs Visible Homelessness"/>
                 </a> 
                 <a href="portfolio5.html" class="col-3 wow fadeIn" style="width: 20%;"  data-title="Nomadic Life">
                   <img src="images/portfolio/Sculptures/NomadicHomelessness/NomadicLife/resizecom_img-1.jpeg" alt="Landing Page"/>
                 </a>
-                <a href="portfolio6.html"  class="col-3 wow fadeIn" style="width: 20%;" data-title="Rememberance">
-                  <img src="images/portfolio/Sculptures/Rememberance/resizecom_img5.jpeg" alt="Landing Page"/>
-                </a> 
+               
                  <a href="portfolio7.html"  class="col-3 wow fadeIn" style="width: 20%;" data-title="Lady with Moon">
                   <img src="images/portfolio/Sculptures/LadywithMoon/img99.jpg" alt="Landing Page"/>
                 </a> 
