--- a/portfolio10.html
+++ b/portfolio10.html
@@ -77,48 +77,73 @@
 <body>
 
 <header>
-    <h1>We Are Innocent</h1>
+    <h1>Everthing Visible Homelessness</h1>
 </header>
 
 <div class="container">
 
     <div class="project-images">
-        <a href="images/portfolio/WeAreInnocent/We_Are_Innocent/DSC_4596.JPG" data-featherlight="image">
-            <img src="images/portfolio/WeAreInnocent/We_Are_Innocent/DSC_4596.JPG" alt="Artwork 1">
+        <a href="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/WhatsApp Image 2025-06-30 at 02.18.32.jpeg" data-featherlight="image">
+            <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/WhatsApp Image 2025-06-30 at 02.18.32.jpeg" alt="Artwork 1">
         </a>
         
     </div>
 
     <div class="project-images">
-        <a href="images/portfolio/WeAreInnocent/We_Are_Innocent/DSC_4566.JPG" data-featherlight="image">
-            <img src="images/portfolio/WeAreInnocent/We_Are_Innocent/DSC_4566.JPG"  alt="Artwork 2">
+        <a href="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/WhatsApp Image 2025-06-30 at 02.18.26.jpeg" data-featherlight="image">
+            <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/WhatsApp Image 2025-06-30 at 02.18.26.jpeg"  alt="Artwork 2">
         </a>
        
     </div>
     <div class="project-images">
-          <a href="images/portfolio/WeAreInnocent/We_Are_Innocent/DSC_4596.JPG" data-featherlight="image">
-            <img src="images/portfolio/WeAreInnocent/We_Are_Innocent/DSC_4596.JPG"  alt="Artwork 2">
+          <a href="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img7.jpeg" data-featherlight="image">
+            <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img7.jpeg"  alt="Artwork 2">
         </a>
     </div>
 <div class="project-images">
-         <a href="images/portfolio/WeAreInnocent/We_Are_Innocent/DSC_4662.JPG" data-featherlight="image">
-            <img src="images/portfolio/WeAreInnocent/We_Are_Innocent/DSC_4662.JPG"  alt="Artwork 2">
+         <a href="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img6.jpeg" data-featherlight="image">
+            <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img6.jpeg" alt="Artwork 2">
         </a>
     </div>
 
     <div class="project-images">
-         <a href="images/portfolio/WeAreInnocent/We_Are_Innocent/DSC_4624.JPG" data-featherlight="image">
-            <img src="images/portfolio/WeAreInnocent/We_Are_Innocent/DSC_4624.JPG"  alt="Artwork 2">
+         <a href="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img5.jpeg" data-featherlight="image">
+            <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img5.jpeg"  alt="Artwork 2">
         </a>
     </div>
      <div class="project-images">
-         <a href="images/portfolio/WeAreInnocent/We_Are_Innocent/DSC_4596.JPG" data-featherlight="image">
-            <img src="images/portfolio/WeAreInnocent/We_Are_Innocent/DSC_4596.JPG"  alt="Artwork 2">
+         <a href="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/WhatsApp Image 2025-06-30 at 02.19.08.jpeg" data-featherlight="image">
+            <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/WhatsApp Image 2025-06-30 at 02.19.08.jpeg"  alt="Artwork 2">
         </a>
     </div>
      <div class="project-images">
-         <a href="images/portfolio/WeAreInnocent/We_Are_Innocent/DSC_4562.JPG" data-featherlight="image">
-            <img src="images/portfolio/WeAreInnocent/We_Are_Innocent/DSC_4562.JPG"  alt="Artwork 2">
+         <a href="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/WhatsApp Image 2025-06-30 at 02.19.09.jpeg" data-featherlight="image">
+            <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/WhatsApp Image 2025-06-30 at 02.19.09.jpeg"  alt="Artwork 2">
+        </a>
+    </div>
+     <div class="project-images">
+         <a href="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/WhatsApp Image 2025-06-30 at 02.19.09 (1).jpeg" data-featherlight="image">
+            <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/WhatsApp Image 2025-06-30 at 02.19.09 (1).jpeg"  alt="Artwork 2">
+        </a>
+    </div>
+     <div class="project-images">
+         <a href="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/WhatsApp Image 2025-06-30 at 02.19.09 (3).jpeg" data-featherlight="image">
+            <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/WhatsApp Image 2025-06-30 at 02.19.09 (3).jpeg"  alt="Artwork 2">
+        </a>
+    </div>
+     <div class="project-images">
+         <a href="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img4.jpeg" data-featherlight="image">
+            <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img4.jpeg"  alt="Artwork 2">
+        </a>
+    </div>
+    <div class="project-images">
+         <a href="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img00.jpeg" data-featherlight="image">
+            <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img00.jpeg"  alt="Artwork 2">
+        </a>
+    </div>
+    <div class="project-images">
+         <a href="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img1.jpeg" data-featherlight="image">
+            <img src="images/portfolio/Sculptures/EverthingIsVisibleHomelessness/img1.jpeg"  alt="Artwork 2">
         </a>
     </div>
     <!-- <div class="project-description">
