--- a/portfolio7.html
+++ b/portfolio7.html
@@ -89,18 +89,18 @@
         
     </div>
 
-    <!-- <div class="project-images">
-        <a href="images/portfolio/Sculptures/LadywithMoon/ " data-featherlight="image">
-            <img src="images/portfolio/Sculptures/LadywithMoon/img5.jpg"  alt="Artwork 2">
+     <div class="project-images">
+        <a href="images/portfolio/Sculptures/LadywithMoon/img4.jpeg " data-featherlight="image">
+            <img src="images/portfolio/Sculptures/LadywithMoon/img4.jpeg"  alt="Artwork 2">
         </a>
        
     </div>
     <div class="project-images">
-          <a href="images/portfolio/Sculptures/Rememberance/img3.jpeg" data-featherlight="image">
-            <img src="images/portfolio/Sculptures/Rememberance/img3.jpeg"  alt="Artwork 2">
+          <a href="images/portfolio/Sculptures/LadywithMoon/img5.jpg" data-featherlight="image">
+            <img src="images/portfolio/Sculptures/LadywithMoon/img5.jpg"  alt="Artwork 2">
         </a>
     </div>
-<div class="project-images">
+<!--<div class="project-images">
          <a href="images/portfolio/Sculptures/Rememberance/img4.jpeg" data-featherlight="image">
             <img src="images/portfolio/Sculptures/Rememberance/img4.jpeg"  alt="Artwork 2">
         </a>
